@@ -1,3 +1,11 @@
+June 11, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * pcsxr/macosx/English.lproj/PCSX.nib/objects.nib: Added "Run ISO" function.
+ * pcsxr/macosx/English.lproj/PCSX.nib/info.nib: Likewise.
+ * pcsxr/macosx/English.lproj/PCSX.nib/classes.nib: Likewise.
+ * pcsxr/macosx/PcsxController.h: Likewise.
+ * pcsxr/macosx/PcsxController.m: Likewise.
+
 June 10, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * libpcsxcore/plugins.c: Don't add "_" to function name for Mac OS X.
